# ocr-igt

./: .gitignore  README.md  pyproject.toml  requirements.txt
ocr_igt/: __init__.py  cli.py  config.py  flextext.py  models.py  preprocess.py
ocr_igt/engines/: __init__.py  base.py  claude.py  tesseract.py
