[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-igt"
version = "0.1.0"
description = "OCR handwritten Fayu interlinear notebooks into FLEx .flextext"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
    "anthropic>=0.40",
    "PyMuPDF>=1.23",
]

[project.optional-dependencies]
# The offline engine only needs OpenCV + Tesseract; the vision engine only
# needs anthropic. Everything is in `dependencies` for a one-line install, but
# these extras document the split.
offline = ["opencv-python-headless>=4.8", "numpy>=1.24", "pytesseract>=0.3.10"]
claude = ["anthropic>=0.40", "opencv-python-headless>=4.8", "numpy>=1.24"]

[project.scripts]
ocr-igt = "ocr_igt.cli:main"

[tool.setuptools.packages.find]
include = ["ocr_igt*"]
